artifacts/external-dns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: externaldns
  namespace: externaldns
spec:
  selector:
    matchLabels:
      app: externaldns
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: externaldns
    spec:
      serviceAccountName: externaldns
      containers:
      - name: externaldns
        image: registry.k8s.io/external-dns/external-dns:v0.13.4
        args:
        - --source=service
        - --source=ingress
        - --domain-filter=${AZURE_DNS_PRIVATE_ZONE}
        - --provider=azure-private-dns
        - --azure-resource-group=${RESOURCE_GROUP}
        - --azure-subscription-id=${SUBSCRIPTION}
        - --policy=upsert-only
        - --log-level=debug
        volumeMounts:
        - name: azure-config-file
          mountPath: /etc/kubernetes
          readOnly: true
      volumes:
      - name: azure-config-file
        secret:
          secretName: azure-config-file
